Migration to SLF4J logging system.